3 of the 5 APIs done
